--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-native-scripts": "1.7.0",
+    "detox": "^5.10.0",
     "jest-expo": "^22.0.0",
+    "react-native-scripts": "1.7.0",
     "react-test-renderer": "16.0.0-beta.5"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
@@ -23,5 +24,15 @@
     "moment": "^2.19.2",
     "react": "16.0.0-beta.5",
     "react-native": "^0.49.5"
+  },
+  "detox": {
+    "configurations": {
+      "ios.sim.debug": {
+        "binaryPath": "ios/build/Build/Products/Debug-iphonesimulator/social-posts.app",
+        "build": "xcodebuild -project ios/social-posts.xcodeproj -scheme social-posts -configuration Debug -sdk iphonesimulator -derivedDataPath ios/build",
+        "type": "ios.simulator",
+        "name": "iPhone 7"
+      }
+    }
   }
 }
